Resolve deprecated features and add more comments