@@ -3,6 +3,7 @@ package com.hillayes.commons.net;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 
 public class Network {
@@ -13,7 +14,7 @@ public class Network {
      * @throws IOException if the IP address cannot be obtained.
      */
     public static String getMyIpAddress() throws IOException {
-        URL url = new URL("http://checkip.amazonaws.com/");
+        URL url = URI.create("http://checkip.amazonaws.com/").toURL();
         try (BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream()))) {
             return br.readLine();
         }
